--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Mohd Abdul Wase</h1>
       <p>I'm <span class="typed" data-typed-items="Electronics Engineer,an iitian"></span></p>
-    </div>
+    </div>Ṣ
   </section><!-- End Hero -->
 
   <main id="main">
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>....wait, i am thinking about me...</p>
+          <p>...wait, i am thinking about me...</p>
         </div>
 
         <div class="row">
